@@ -1,6 +1,6 @@
 package uk.gov.hmcts.reform.hmc.utils;
 
-import org.assertj.core.util.Lists;
+import com.google.common.collect.Lists;
 import uk.gov.hmcts.reform.hmc.data.ActualAttendeeIndividualDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.ActualHearingDayEntity;
 import uk.gov.hmcts.reform.hmc.data.ActualHearingDayPausesEntity;
@@ -24,6 +24,7 @@ import uk.gov.hmcts.reform.hmc.data.PanelAuthorisationRequirementsEntity;
 import uk.gov.hmcts.reform.hmc.data.PanelRequirementsEntity;
 import uk.gov.hmcts.reform.hmc.data.PanelSpecialismsEntity;
 import uk.gov.hmcts.reform.hmc.data.PanelUserRequirementsEntity;
+import uk.gov.hmcts.reform.hmc.data.PartyRelationshipDetailsEntity;
 import uk.gov.hmcts.reform.hmc.data.ReasonableAdjustmentsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
@@ -31,6 +32,11 @@ import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.LinkType;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListingStatus;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDay;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDayParties;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDayPartyDetail;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDayPauseDayTime;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingOrganisationDetail;
 import uk.gov.hmcts.reform.hmc.model.Attendee;
 import uk.gov.hmcts.reform.hmc.model.CaseCategory;
 import uk.gov.hmcts.reform.hmc.model.CaseCategoryType;
@@ -40,6 +46,8 @@ import uk.gov.hmcts.reform.hmc.model.DayOfWeekUnAvailableType;
 import uk.gov.hmcts.reform.hmc.model.DayOfWeekUnavailable;
 import uk.gov.hmcts.reform.hmc.model.DeleteHearingRequest;
 import uk.gov.hmcts.reform.hmc.model.GetHearingsResponse;
+import uk.gov.hmcts.reform.hmc.model.HearingActual;
+import uk.gov.hmcts.reform.hmc.model.HearingActualsOutcome;
 import uk.gov.hmcts.reform.hmc.model.HearingDaySchedule;
 import uk.gov.hmcts.reform.hmc.model.HearingDetails;
 import uk.gov.hmcts.reform.hmc.model.HearingLocation;
@@ -62,6 +70,7 @@ import uk.gov.hmcts.reform.hmc.model.UpdateHearingRequest;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -75,6 +84,7 @@ import static uk.gov.hmcts.reform.hmc.constants.Constants.UNAVAILABILITY_RANGE_T
 public class TestingUtil {
 
     public static final String CASE_REFERENCE = "1111222233334444";
+    public static Long ID = 2000000000L;
 
     private TestingUtil() {
     }
@@ -92,7 +102,7 @@ public class TestingUtil {
         hearingWindow.setDateRangeStart(LocalDate.parse("2017-03-01"));
         hearingDetails.setHearingWindow(hearingWindow);
         hearingDetails.setDuration(0);
-        hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList("First reason", "Second reason"));
+        hearingDetails.setNonStandardHearingDurationReasons(List.of("First reason", "Second reason"));
         hearingDetails.setHearingPriorityType("Priority type");
         hearingDetails.setHearingIsLinkedFlag(Boolean.TRUE);
         HearingLocation location1 = new HearingLocation();
@@ -101,7 +111,7 @@ public class TestingUtil {
         List<HearingLocation> hearingLocations = new ArrayList<>();
         hearingLocations.add(location1);
         hearingDetails.setHearingLocations(hearingLocations);
-        hearingDetails.setFacilitiesRequired(Arrays.asList("facility1", "facility2"));
+        hearingDetails.setFacilitiesRequired(List.of("facility1", "facility2"));
         return hearingDetails;
     }
 
@@ -161,8 +171,8 @@ public class TestingUtil {
 
     public static List<UnavailabilityEntity> unavailabilityEntity() {
         List<UnavailabilityEntity> unavailabilityEntities = new ArrayList<>();
-        setUnAvailabilityValues(unavailabilityEntities,UNAVAILABILITY_DOW_TYPE);
-        setUnAvailabilityValues(unavailabilityEntities,UNAVAILABILITY_RANGE_TYPE);
+        setUnAvailabilityValues(unavailabilityEntities, UNAVAILABILITY_DOW_TYPE);
+        setUnAvailabilityValues(unavailabilityEntities, UNAVAILABILITY_RANGE_TYPE);
         return unavailabilityEntities;
     }
 
@@ -195,8 +205,6 @@ public class TestingUtil {
         individualDetailEntity.setChannelType("channelType");
         individualDetailEntity.setInterpreterLanguage("english");
         individualDetailEntity.setVulnerableFlag(true);
-        individualDetailEntity.setRelatedPartyRelationshipType("relationshipType");
-        individualDetailEntity.setRelatedPartyID("id");
         individualDetailEntity.setVulnerabilityDetails("details");
         individualDetailEntity.setCustodyStatus("custodyStatus");
         individualDetailEntity.setOtherReasonableAdjustmentDetails("otherReason");
@@ -214,7 +222,7 @@ public class TestingUtil {
         partyDetails2.setPartyType("IND");
         partyDetails2.setPartyRole("DEF2");
 
-        return Lists.newArrayList(partyDetails1, partyDetails2);
+        return List.of(partyDetails1, partyDetails2);
     }
 
     public static List<CaseCategoriesEntity> caseCategoriesEntities() {
@@ -286,6 +294,7 @@ public class TestingUtil {
         hearingEntity.setStatus(POST_HEARING_STATUS);
         hearingEntity.setLinkedOrder(1L);
         CaseHearingRequestEntity caseHearingRequestEntity = caseHearingRequestEntity();
+        caseHearingRequestEntity.setHearingParties(List.of(new HearingPartyEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
         return hearingEntity;
     }
@@ -378,7 +387,9 @@ public class TestingUtil {
 
     public static UpdateHearingRequest updateHearingRequest(int version) {
         UpdateHearingRequest request = new UpdateHearingRequest();
-        request.setHearingDetails(hearingDetails());
+        HearingDetails hearingDetails = hearingDetails();
+        hearingDetails.setAmendReasonCode("reason");
+        request.setHearingDetails(hearingDetails);
         request.setCaseDetails(caseDetails());
         request.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
         RequestDetails requestDetails = new RequestDetails();
@@ -393,7 +404,9 @@ public class TestingUtil {
 
     public static UpdateHearingRequest validUpdateHearingRequest() {
         UpdateHearingRequest request = new UpdateHearingRequest();
-        request.setHearingDetails(hearingDetails());
+        HearingDetails hearingDetails = hearingDetails();
+        hearingDetails.setAmendReasonCode("reason");
+        request.setHearingDetails(hearingDetails);
         CaseDetails caseDetails = getValidCaseDetails();
         request.setCaseDetails(caseDetails);
         request.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
@@ -461,7 +474,7 @@ public class TestingUtil {
         getHearingsResponse.setCaseRef(caseRef);
         getHearingsResponse.setHmctsServiceCode("AB1A");
         CaseHearing caseHearing = new CaseHearing();
-        caseHearing.setHearingId(2000000000L);
+        caseHearing.setHearingId(ID);
         caseHearing.setHearingRequestDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         caseHearing.setHearingType("45YAO6VflHAmYy7N85fv");
         caseHearing.setHmcStatus("HEARING_REQUESTED");
@@ -492,10 +505,30 @@ public class TestingUtil {
     public static CaseHearingRequestEntity getCaseHearingsEntities() {
         CaseHearingRequestEntity entity = new CaseHearingRequestEntity();
         HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(ID);
+        hearingEntity.setIsLinkedFlag(Boolean.TRUE);
+        entity.setCaseHearingID(ID);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        entity.setVersionNumber(1);
+        hearingEntity.setIsLinkedFlag(true);
+        hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
+        entity.setHearing(hearingEntity);
+        entity.setHmctsServiceCode("ABA1");
+        entity.setCaseReference("12345");
+        entity.setHearingType("Some hearing type");
+        entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
+        entity.getHearing().getHearingResponses().get(0)
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        return entity;
+    }
+
+    public static CaseHearingRequestEntity getCaseHearingsEntities(String status) {
+        CaseHearingRequestEntity entity = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(2000000000L);
         hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         entity.setCaseHearingID(2000000000L);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(status);
         entity.setVersionNumber(1);
         hearingEntity.setIsLinkedFlag(true);
         hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
@@ -534,8 +567,8 @@ public class TestingUtil {
     private static void getFirstEntity(List<CaseHearingRequestEntity> entities) {
         CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
-        entity1.setCaseHearingID(2000000000L);
+        hearingEntity.setId(ID);
+        entity1.setCaseHearingID(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
         entity1.setHearing(hearingEntity);
         entity1.setHmctsServiceCode("ABA1");
@@ -545,6 +578,62 @@ public class TestingUtil {
         entity1.getHearing().getHearingResponses().get(0)
             .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entities.add(entity1);
+    }
+
+    public static HearingActual getHearingActual(HearingActualsOutcome hearingActualsOutcome,
+                                                 List<ActualHearingDay> actualHearingDays) {
+        HearingActual hearingActual = new HearingActual();
+        hearingActual.setActualHearingDays(actualHearingDays);
+        hearingActual.setHearingOutcome(hearingActualsOutcome);
+        return hearingActual;
+    }
+
+    public static HearingActualsOutcome getHearingActualOutcome(String hearingType, Boolean hearingFinal,
+                                                                String hearingResult, String hearingReason,
+                                                                LocalDate hearingDate) {
+        HearingActualsOutcome hearingActualsOutcome = new HearingActualsOutcome();
+        hearingActualsOutcome.setHearingType(hearingType);
+        hearingActualsOutcome.setHearingFinalFlag(hearingFinal);
+        hearingActualsOutcome.setHearingResult(hearingResult);
+        hearingActualsOutcome.setHearingResultReasonType(hearingReason);
+        hearingActualsOutcome.setHearingResultDate(hearingDate);
+        return hearingActualsOutcome;
+    }
+
+    public static ActualHearingDay getHearingActualDay(LocalDate hearingDate, LocalDateTime startTime,
+                                                       LocalDateTime endTime,
+                                                       List<ActualHearingDayPauseDayTime> pauseDateTimes,
+                                                       List<ActualHearingDayParties> actualDayParties) {
+        ActualHearingDay hearingActualDay = new ActualHearingDay();
+        hearingActualDay.setHearingDate(hearingDate);
+        hearingActualDay.setHearingStartTime(startTime);
+        hearingActualDay.setHearingEndTime(endTime);
+        hearingActualDay.setActualDayParties(actualDayParties);
+        hearingActualDay.setPauseDateTimes(pauseDateTimes);
+        return hearingActualDay;
+    }
+
+    public static ActualHearingDayPauseDayTime getHearingActualDayPause(LocalDateTime startTime,
+                                                                        LocalDateTime endTime) {
+        ActualHearingDayPauseDayTime actualHearingDayPauseDayTime = new ActualHearingDayPauseDayTime();
+        actualHearingDayPauseDayTime.setPauseEndTime(endTime);
+        actualHearingDayPauseDayTime.setPauseStartTime(startTime);
+        return actualHearingDayPauseDayTime;
+    }
+
+    public static ActualHearingDayParties getHearingActualDayParties(
+        String partyId, String partyRole, ActualHearingDayPartyDetail individualDetails,
+        ActualHearingOrganisationDetail organisationDetails, String partyChannelSubType, Boolean didNotAttendFlag,
+        String representedParty) {
+        ActualHearingDayParties actualHearingDayParties = new ActualHearingDayParties();
+        actualHearingDayParties.setActualPartyId(partyId);
+        actualHearingDayParties.setPartyRole(partyRole);
+        actualHearingDayParties.setIndividualDetails(individualDetails);
+        actualHearingDayParties.setOrganisationDetails(organisationDetails);
+        actualHearingDayParties.setPartyChannelSubType(partyChannelSubType);
+        actualHearingDayParties.setDidNotAttendFlag(didNotAttendFlag);
+        actualHearingDayParties.setRepresentedParty(representedParty);
+        return actualHearingDayParties;
     }
 
     private static void getSecondEntity(List<CaseHearingRequestEntity> entities) {
@@ -608,9 +697,9 @@ public class TestingUtil {
 
     public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         if (partyType.getLabel() == PartyType.IND.getLabel()) {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
         } else {
@@ -622,8 +711,21 @@ public class TestingUtil {
 
     public static HearingEntity getCaseHearingsEntity() {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
+
+        hearingEntity.getCaseHearingRequests().get(0).setVersionNumber(1);
+        hearingEntity.getCaseHearingRequests().get(0).setHearingParties(List.of(
+            hearingPartyEntitySetReference("reference")));
+        return hearingEntity;
+    }
+
+    public static HearingEntity getCaseHearingsEntity(String status) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setStatus(status);
         hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
 
@@ -634,12 +736,13 @@ public class TestingUtil {
 
     public static HearingEntity getHearingsEntityForHearingActuals(String status) {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus(status);
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyOrg());
 
         CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
+        caseHearingRequestEntity.setCaseHearingID(ID);
         caseHearingRequestEntity.setVersionNumber(1);
         caseHearingRequestEntity.setHearingType("hearingType");
         caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
@@ -653,7 +756,9 @@ public class TestingUtil {
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
         caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
-        caseHearingRequestEntity.setHearingParties(Arrays.asList(hearingPartyEntityOrg()));
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntitySetReference("reference2"),
+                                                                 hearingPartyEntitySetReference("reference"),
+                                                                 hearingPartyEntitySetReference("reference2")));
         caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
 
         hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity(PartyType.ORG));
@@ -662,13 +767,14 @@ public class TestingUtil {
 
     public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyInd());
 
         CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
         caseHearingRequestEntity.setVersionNumber(1);
+        caseHearingRequestEntity.setCaseHearingID(ID);
         caseHearingRequestEntity.setHearingType("hearingType");
         caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
         caseHearingRequestEntity.setCaseReference("caseRef");
@@ -681,7 +787,7 @@ public class TestingUtil {
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
         caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
-        caseHearingRequestEntity.setHearingParties(Arrays.asList(hearingPartyEntityInd()));
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityInd()));
         caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
 
         hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity(PartyType.IND));
@@ -694,17 +800,18 @@ public class TestingUtil {
         entity.setHearingResultType(HearingResultType.ADJOURNED);
         entity.setHearingResultReasonType("resultReason");
         entity.setHearingResultDate(LocalDate.of(2000, 01, 01));
-        entity.setActualHearingDay(Arrays.asList(actualHearingDayEntity(partyType)));
+        entity.setActualHearingDay(List.of(actualHearingDayEntity(partyType)));
         entity.setActualHearingIsFinalFlag(true);
         return entity;
     }
 
     public static ActualPartyRelationshipDetailEntity actualPartyRelationshipDetailEntity(
         ActualHearingPartyEntity actualHearingPartyEntity) {
-        ActualPartyRelationshipDetailEntity entity = new ActualPartyRelationshipDetailEntity();
-        entity.setActualPartyRelationshipId(1L);
-        entity.setTargetActualPartyId(1L);
-        entity.setActualHearingParty(actualHearingPartyEntity);
+        ActualPartyRelationshipDetailEntity entity = ActualPartyRelationshipDetailEntity
+            .builder()
+            .actualPartyRelationshipId(1L)
+            .targetActualParty(actualHearingPartyEntity)
+            .sourceActualParty(actualHearingPartyEntity).build();
         return entity;
     }
 
@@ -713,8 +820,8 @@ public class TestingUtil {
         entity.setHearingDate(LocalDate.of(2000, 01, 01));
         entity.setStartDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
-        entity.setActualHearingDayPauses(Arrays.asList(actualHearingDayPausesEntity()));
-        entity.setActualHearingParty(Arrays.asList(actualHearingPartyEntity(partyType)));
+        entity.setActualHearingDayPauses(List.of(actualHearingDayPausesEntity()));
+        entity.setActualHearingParty(List.of(actualHearingPartyEntity(partyType)));
         return entity;
     }
 
@@ -731,8 +838,8 @@ public class TestingUtil {
         entity.setPartyId("1");
         entity.setActualPartyRoleType("roleType");
         entity.setDidNotAttendFlag(false);
-        entity.setActualAttendeeIndividualDetail(Arrays.asList(actualAttendeeIndividualDetailEntity(partyType)));
-        entity.setActualPartyRelationshipDetail(Arrays.asList(actualPartyRelationshipDetailEntity(entity)));
+        entity.setActualAttendeeIndividualDetail(actualAttendeeIndividualDetailEntity(partyType));
+        entity.setActualPartyRelationshipDetail(List.of(actualPartyRelationshipDetailEntity(entity)));
         return entity;
     }
 
@@ -757,7 +864,22 @@ public class TestingUtil {
         entity.setListingStatus(ListingStatus.FIXED.name());
         entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
         entity.setCancellationReasonType("Cancelled Reason 1");
-        entity.setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
+        entity.setHearingDayDetails(List.of(hearingDayDetailsEntity()));
+        return entity;
+    }
+
+    public static HearingResponseEntity hearingResponseEntity(Integer version, Integer requestVersion,
+                                                              LocalDateTime requestTimestamp,
+                                                              List<HearingDayDetailsEntity> hearingDayDetailsEntities) {
+        HearingResponseEntity entity = new HearingResponseEntity();
+        entity.setResponseVersion(version);
+        entity.setRequestVersion(requestVersion);
+        entity.setRequestTimeStamp(requestTimestamp);
+        entity.setHearingResponseId(2L);
+        entity.setListingStatus(ListingStatus.FIXED.name());
+        entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
+        entity.setCancellationReasonType("Cancelled Reason 1");
+        entity.setHearingDayDetails(hearingDayDetailsEntities);
         return entity;
     }
 
@@ -769,7 +891,30 @@ public class TestingUtil {
         entity.setVenueId("venueId");
 
         HearingAttendeeDetailsEntity attendee = new HearingAttendeeDetailsEntity();
-        entity.setHearingAttendeeDetails(List.of(attendee));
+        attendee.setId(ID);
+        attendee.setPartySubChannelType("partySubChannelA");
+        attendee.setPartyId("reference");
+
+        HearingAttendeeDetailsEntity attendee2 = new HearingAttendeeDetailsEntity();
+        attendee2.setId(ID);
+        attendee2.setPartySubChannelType("partySubChannelB");
+        attendee2.setPartyId("reference2");
+
+
+        HearingAttendeeDetailsEntity attendee3 = new HearingAttendeeDetailsEntity();
+        attendee3.setId(ID);
+        attendee3.setPartySubChannelType("partySubChannelC");
+        attendee3.setPartyId("reference3");
+        entity.setHearingAttendeeDetails(List.of(attendee, attendee2, attendee3));
+        return entity;
+    }
+
+    public static HearingDayDetailsEntity hearingDayDetailsEntity(LocalDateTime startDateTime) {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(startDateTime);
+        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setVenueId("venue1");
+        entity.setRoomId("room1");
         return entity;
     }
 
@@ -784,21 +929,48 @@ public class TestingUtil {
         return entity;
     }
 
+    public static HearingPartyEntity hearingPartyEntitySetReference(String partyReference) {
+        HearingPartyEntity entity = new HearingPartyEntity();
+        entity.setPartyReference(partyReference);
+        entity.setPartyType(PartyType.ORG);
+        entity.setPartyRoleType("role");
+        entity.setUnavailabilityEntity(unavailabilityEntity());
+        entity.setOrganisationDetailEntity(organisationDetailEntity());
+        entity.setCaseHearing(caseHearingRequestEntityWithPartyOrg());
+
+        return entity;
+    }
+
     public static HearingPartyEntity hearingPartyEntityInd() {
         HearingPartyEntity entity = new HearingPartyEntity();
         entity.setPartyReference("reference");
         entity.setPartyType(PartyType.IND);
         entity.setPartyRoleType("role");
         entity.setContactDetails(List.of(contactDetailsEntity_Email(), contactDetailsEntity_Phone()));
-        entity.setIndividualDetailEntity(List.of(individualDetailEntity()));
+        entity.setIndividualDetailEntity(individualDetailEntity());
+        entity.setCaseHearing(caseHearingRequestEntityWithPartyOrg());
         entity.setReasonableAdjustmentsEntity(List.of(reasonableAdjustmentsEntity()));
+        entity.setPartyRelationshipDetailsEntity(List.of(partyRelationshipDetailsEntity("P1", "A"),
+                partyRelationshipDetailsEntity("P2", "B")));
         return entity;
+    }
+
+    private static PartyRelationshipDetailsEntity partyRelationshipDetailsEntity(String targetTechPartyId,
+                                                                                 String relationshipType) {
+
+        HearingPartyEntity targetHearingPartyEntity = new HearingPartyEntity();
+        targetHearingPartyEntity.setPartyReference(targetTechPartyId);
+
+        return PartyRelationshipDetailsEntity.builder()
+                .targetTechParty(targetHearingPartyEntity)
+                .relationshipType(relationshipType)
+                .build();
     }
 
     private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyOrg() {
         CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
         entity1.setVersionNumber(1);
-        entity1.setCaseHearingID(2000000000L);
+        entity1.setCaseHearingID(ID);
         entity1.setHmctsServiceCode("ABA1");
         entity1.setCaseReference("12345");
         entity1.setHearingType("Some hearing type");
@@ -809,7 +981,7 @@ public class TestingUtil {
     private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyInd() {
         CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
         entity1.setVersionNumber(1);
-        entity1.setCaseHearingID(2000000000L);
+        entity1.setCaseHearingID(ID);
 
         entity1.setHearing(getCaseHearingsEntity());
         entity1.setHmctsServiceCode("ABA1");
@@ -854,7 +1026,7 @@ public class TestingUtil {
             partyDetails2.setOrganisationDetails(organisationDetails());
         }
 
-        List<PartyDetails> partyDetails = Lists.newArrayList(partyDetails1, partyDetails2);
+        List<PartyDetails> partyDetails = List.of(partyDetails1, partyDetails2);
         return partyDetails;
     }
 
@@ -867,7 +1039,7 @@ public class TestingUtil {
         detail2.setUnavailableFromDate(LocalDate.parse("2030-10-20"));
         detail2.setUnavailableToDate(LocalDate.parse("2030-10-22"));
         detail2.setUnavailabilityType("All Day");
-        List<UnavailabilityRanges> unavailabilityRanges = Lists.newArrayList(detail1, detail2);
+        List<UnavailabilityRanges> unavailabilityRanges = List.of(detail1, detail2);
         return unavailabilityRanges;
     }
 
@@ -885,13 +1057,14 @@ public class TestingUtil {
     public static HearingDetails hearingDetailsWithAllFields() {
         HearingDetails hearingDetails = new HearingDetails();
         hearingDetails.setAutoListFlag(true);
+        hearingDetails.setAmendReasonCode("reason");
         hearingDetails.setHearingType("Some hearing type");
         HearingWindow hearingWindow = new HearingWindow();
         hearingWindow.setDateRangeEnd(LocalDate.parse("2017-03-01"));
         hearingWindow.setDateRangeStart(LocalDate.parse("2017-03-01"));
         hearingDetails.setHearingWindow(hearingWindow);
         hearingDetails.setDuration(60);
-        hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList("First reason", "Second reason"));
+        hearingDetails.setNonStandardHearingDurationReasons(List.of("First reason", "Second reason"));
         hearingDetails.setHearingPriorityType("Priority type");
         hearingDetails.setNumberOfPhysicalAttendees(4);
         hearingDetails.setHearingInWelshFlag(false);
@@ -901,14 +1074,14 @@ public class TestingUtil {
         List<HearingLocation> hearingLocations = new ArrayList<>();
         hearingLocations.add(location1);
         hearingDetails.setHearingLocations(hearingLocations);
-        hearingDetails.setFacilitiesRequired(Arrays.asList("facility1", "facility2"));
+        hearingDetails.setFacilitiesRequired(List.of("facility1", "facility2"));
         hearingDetails.setListingComments("Some listing comments");
         hearingDetails.setHearingRequester("Some judge");
         hearingDetails.setPrivateHearingRequiredFlag(false);
         hearingDetails.setLeadJudgeContractType("AB123");
         hearingDetails.setPanelRequirements(TestingUtil.panelRequirements());
         hearingDetails.getPanelRequirements().setPanelPreferences(TestingUtil.panelPreferences());
-        hearingDetails.getPanelRequirements().setPanelSpecialisms(Arrays.asList("Specialism 1"));
+        hearingDetails.getPanelRequirements().setPanelSpecialisms(List.of("Specialism 1"));
         hearingDetails.setHearingIsLinkedFlag(false);
         hearingDetails.setPanelRequirements(panelRequirementsList());
         return hearingDetails;
@@ -916,9 +1089,9 @@ public class TestingUtil {
 
     public static PanelRequirements panelRequirementsList() {
         PanelRequirements panelRequirements = new PanelRequirements();
-        panelRequirements.setRoleType(Arrays.asList("RoleType1", "RoleType2"));
-        panelRequirements.setAuthorisationTypes(Arrays.asList("AuthorisationType1", "AuthorisationType2"));
-        panelRequirements.setAuthorisationSubType(Arrays.asList("AuthorisationSubType2", "AuthorisationSubType2"));
+        panelRequirements.setRoleType(List.of("RoleType1", "RoleType2"));
+        panelRequirements.setAuthorisationTypes(List.of("AuthorisationType1", "AuthorisationType2"));
+        panelRequirements.setAuthorisationSubType(List.of("AuthorisationSubType2", "AuthorisationSubType2"));
         return panelRequirements;
     }
 
@@ -931,7 +1104,7 @@ public class TestingUtil {
         panelPreferenceTwo.setRequirementType("OPTINC");
         panelPreferenceTwo.setMemberType("Member type 2");
         panelPreferenceTwo.setMemberID("MID999");
-        List<PanelPreference> panelPreferences = Arrays.asList(panelPreference, panelPreferenceTwo);
+        List<PanelPreference> panelPreferences = List.of(panelPreference, panelPreferenceTwo);
         return panelPreferences;
     }
 
@@ -942,18 +1115,18 @@ public class TestingUtil {
         individualDetails.setLastName("Jason");
         individualDetails.setPreferredHearingChannel("channel 5");
         individualDetails.setInterpreterLanguage("French");
-        individualDetails.setReasonableAdjustments(Arrays.asList("Adjust1", "Adjust2", "Adjust3"));
+        individualDetails.setReasonableAdjustments(List.of("Adjust1", "Adjust2", "Adjust3"));
         individualDetails.setVulnerableFlag(false);
         individualDetails.setVulnerabilityDetails("More vulnerable");
         individualDetails.setHearingChannelPhone(List.of("01111111111"));
         individualDetails.setHearingChannelEmail(List.of("hearing.channel_udated@email.com"));
         List<RelatedParty> relatedParties = new ArrayList<>();
         RelatedParty relatedParty1 = new RelatedParty();
-        relatedParty1.setRelatedPartyID("Party1");
+        relatedParty1.setRelatedPartyID("P1");
         relatedParty1.setRelationshipType("Mother");
         relatedParties.add(relatedParty1);
         RelatedParty relatedParty2 = new RelatedParty();
-        relatedParty2.setRelatedPartyID("Party2");
+        relatedParty2.setRelatedPartyID("P2");
         relatedParty2.setRelationshipType("Father");
         relatedParties.add(relatedParty2);
         individualDetails.setRelatedParties(relatedParties);
@@ -964,5 +1137,104 @@ public class TestingUtil {
         DateTimeFormatter format = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
         return LocalDateTime.parse(dateStr, format);
     }
+
+    public static HearingActual hearingActualWithDuplicatedHearingDate() {
+        return hearingActual(hearingActualsOutcome(),
+                             List.of(actualHearingDay(LocalDate.of(2022, 3, 23)),
+                                           actualHearingDay(LocalDate.of(2022, 3, 23))));
+    }
+
+    public static HearingActual hearingActualWithHearingDateInFuture() {
+        return hearingActual(hearingActualsOutcome(),
+                             List.of(actualHearingDay(LocalDate.of(2022, 3, 23)),
+                                           actualHearingDay(LocalDate.of(2922, 3, 23))));
+    }
+
+    public static HearingActual hearingActualWithHearingDates(List<ActualHearingDay> actualHearingDays) {
+        return hearingActual(hearingActualsOutcome(), actualHearingDays);
+    }
+
+    public static HearingActual hearingActual() {
+        HearingActual request = new HearingActual();
+        request.setHearingOutcome(hearingActualsOutcome());
+        request.setActualHearingDays(List.of(actualHearingDay(LocalDate.of(2022, 1, 28))));
+
+        return request;
+    }
+
+    public static HearingActual hearingActual(HearingActualsOutcome outcome, List<ActualHearingDay> actualHearingDays) {
+        HearingActual request = new HearingActual();
+        request.setHearingOutcome(outcome);
+        request.setActualHearingDays(actualHearingDays);
+        return request;
+    }
+
+    public static HearingActualsOutcome hearingActualsOutcome() {
+        HearingActualsOutcome hearingActualsOutcome = new HearingActualsOutcome();
+        hearingActualsOutcome.setHearingType("Witness Statement");
+        hearingActualsOutcome.setHearingFinalFlag(false);
+        hearingActualsOutcome.setHearingResult("COMPLETED");
+        hearingActualsOutcome.setHearingResultReasonType("Nothing more to hear");
+        hearingActualsOutcome.setHearingResultDate(LocalDate.of(2022, 2, 1));
+        return hearingActualsOutcome;
+    }
+
+    public static HearingActualsOutcome hearingActualsOutcome(String hearingResult,
+                                                              String hearingResultReasonType) {
+        HearingActualsOutcome hearingActualsOutcome = hearingActualsOutcome();
+        hearingActualsOutcome.setHearingResult(hearingResult);
+        hearingActualsOutcome.setHearingResultReasonType(hearingResultReasonType);
+        return hearingActualsOutcome;
+    }
+
+    public static ActualHearingDay actualHearingDay(LocalDate hearingDate) {
+        ActualHearingDay actualHearingDay = new ActualHearingDay();
+        actualHearingDay.setHearingDate(hearingDate);
+        actualHearingDay.setHearingStartTime(LocalDateTime.of(hearingDate, LocalTime.of(10, 0)));
+        actualHearingDay.setHearingEndTime(LocalDateTime.of(hearingDate, LocalTime.of(15, 0)));
+        actualHearingDay.setPauseDateTimes(List.of(actualHearingPauseDateTime(
+            LocalDateTime.of(hearingDate, LocalTime.of(12, 0)),
+            LocalDateTime.of(hearingDate, LocalTime.of(12, 30))
+        )));
+
+        actualHearingDay.setActualDayParties(List.of(
+            actualHearingParty(123L, "43333", actualHearingPartyDetails("WitnessForeName1", "WitnessLastName1"),
+                               "claiming party", false
+            )
+        ));
+        return actualHearingDay;
+    }
+
+    private static ActualHearingDayParties actualHearingParty(Long partyId,
+                                                              String partyRole,
+                                                              ActualHearingDayPartyDetail partyDetail,
+                                                              String partyChannelSubType,
+                                                              Boolean didNotAttendFlag) {
+        ActualHearingDayParties parties = new ActualHearingDayParties();
+
+        parties.setActualPartyId(partyId.toString());
+        parties.setPartyRole(partyRole);
+        parties.setIndividualDetails(partyDetail);
+        parties.setPartyChannelSubType(partyChannelSubType);
+        parties.setDidNotAttendFlag(didNotAttendFlag);
+
+        return parties;
+    }
+
+    private static ActualHearingDayPartyDetail actualHearingPartyDetails(String firstName, String lastName) {
+        ActualHearingDayPartyDetail partyDetail = new ActualHearingDayPartyDetail();
+        partyDetail.setFirstName(firstName);
+        partyDetail.setLastName(lastName);
+        return partyDetail;
+    }
+
+    private static ActualHearingDayPauseDayTime actualHearingPauseDateTime(LocalDateTime pauseStartTime,
+                                                                           LocalDateTime pauseEndTime) {
+        ActualHearingDayPauseDayTime pauseDayTime = new ActualHearingDayPauseDayTime();
+        pauseDayTime.setPauseStartTime(pauseStartTime);
+        pauseDayTime.setPauseEndTime(pauseEndTime);
+        return pauseDayTime;
+    }
+
 }
 
